# EVM-Deck

./: .gitignore  CODE_REVIEW.md  LICENSE  MIDI_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  RASPBERRY_PI_DEPLOYMENT.md  README.md  USER_GUIDE.md  check_app_midi_identity.py  check_midi_identity.py  devdeck.log.1  devdeck.log.2  devdeck.log.3  devdeck.log.4  ketron_presets.json  ketron_styles.json  ketron_voices.json  list_midi_ports.py  main.py  pyproject.toml  requirements.txt  run-devdeck.sh  settings.yml  setup_macos.py  test_ketron_sysex.py  test_ketron_volume_manager.py  test_midi.py
config/: README.md  key_mappings.json  settings.yml  settings.yml.template
devdeck/: boot_logo_updater.py  deck_context.py  deck_manager.py  ketron.py  ketron_volume_manager.py  main.py  midi_manager.py  path_utils.py  usb_device_checker.py
devdeck/controls/: base_control.py  command_control.py  ketron_key_mapping_control.py  mic_mute_control.py  midi_control.py  navigation_toggle_control.py  text_control.py  timer_control.py  volume_level_control.py
devdeck/decks/: second_page_deck_controller.py  single_page_deck_controller.py
devdeck/examples/: README.md  midi_control_example.py  test_midi_connectivity.py
devdeck/examples/controls/: update_text_example.py
devdeck/examples/midi/: midi_control_example.py
devdeck/gui/: __init__.py  control_panel.py  deck_manager_registry.py  key_press_queue.py
devdeck/ketron/: __init__.py  ketron.py  ketron_volume_manager.py
devdeck/ketron/controls/: __init__.py  ketron_key_mapping_control.py
devdeck/midi/: __init__.py  midi_manager.py
devdeck/midi/controls/: __init__.py  midi_control.py
devdeck/settings/: devdeck_settings.py  migration.py
docs/: BUILD_WORKFLOW.md  CODE_REVIEW_FOLLOWUP.md  MACOS_PACKAGING.md  MACOS_PACKAGING_TROUBLESHOOTING.md  MAC_QUICK_START.md  MIDI_IMPLEMENTATION.md  NEXT_STEPS.md  PROJECT_STRUCTURE.md  RASPBERRY_PI_DEPLOYMENT.md  RASPBERRY_PI_GUI_QUICK_START.md  README.md  USER_GUIDE.md  mac_midi_install.md
scripts/: README.md  list_midi_ports.py
scripts/check/: check_app_midi_identity.py  check_windows_midi.ps1
scripts/generate/: generate_key_mappings.py
scripts/list/: list_midi_ports.py
scripts/manage/: manage-service.sh
scripts/run/: run-devdeck.bat  run-devdeck.ps1
scripts/systemd/: devdeck-logs.desktop  devdeck.service  install-logs-autostart.sh  install-service.sh  show-logs-terminal.sh
scripts/test/: test_midi_output.py
scripts/update/: update-devdeck.sh
tests/: list_midi_ports.py
tests/devdeck/controls/: test_command_control.py
tests/devdeck/ketron/: __init__.py  test_ketron_identity.py  test_ketron_sysex.py  test_ketron_volume_manager.py
tests/devdeck/midi/: __init__.py  test_midi.py  test_midi_connectivity.py
tests/devdeck/usb/: __init__.py  test_usb_devices.py
