[project]
name = "devdeck-main"
version = "0.1.0"
description = "Stream Deck control software for software developers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "assertpy",
    "cerberus",
    "devdeck-core==1.0.7",
    "emoji",
    "jsonschema",
    "mido",
    "pillow",
    "pulsectl",
    "python-rtmidi",
    "pytest",
    "pyyaml",
    "requests",
    "streamdeck",
]
