[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devdeck"
dynamic = ["version"]  # Version determined from git tags via setuptools-scm
description = "Using a Stream Deck with the Ketron EVM as a MIDI Controller."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "James Ridgway"}
    {name = "Anton Minnie"}
]
urls = {
    Homepage = "https://github.com/jamesridgway/devdeck",
    Fork = "https://github.com/aminnie/EVM-MIDI_DECK/network/dependencies"
}
dependencies = [
    "assertpy",
    "cerberus",
    "devdeck-core==1.0.7",
    "emoji",
    "jsonschema",
    "mido",
    "pillow<10.0.0",  # Pin to avoid textsize() removal issue
    "pulsectl",
    "python-rtmidi",
    "pytest",
    "pyyaml",
    "requests",
    "streamdeck",
]

[project.scripts]
devdeck = "devdeck.main:main"

[tool.setuptools]
packages = ["devdeck"]
# Version is automatically handled by setuptools-scm via dynamic = ["version"] in [project]

[tool.setuptools.package-data]
devdeck = [
    "assets/font-awesome/*",
]

[tool.setuptools-scm]
# Use git tags for versioning (similar to setup.py's get_version())
# Falls back to "0.1.0" if no git tags are found
fallback_version = "0.1.0"
write_to = "devdeck/_version.py"
